--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
-sqlalchemy==2.0.27
-psycopg2-binary==2.9.9
-asyncpg==0.29.0
-alembic==1.13.1
-pydantic==2.6.1
-pydantic-settings==2.2.1
-openai==1.12.0
-python-dotenv==1.0.1
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+asyncpg>=0.29.0
+alembic>=1.13.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+openai>=1.12.0
+python-dotenv>=1.0.0
 wuying-agentbay-sdk>=1.0.0
-playwright==1.41.2
+playwright>=1.41.0
