--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ pydantic>=2.0.0
 pydantic-settings>=2.0.0
 openai>=1.12.0
 python-dotenv>=1.0.0
-wuying-agentbay-sdk>=1.0.0
+wuying-agentbay-sdk
 playwright>=1.41.0
